# posture-iq

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PostureIQ.pptx  README.md  SECURITY.md  SETUP.md  TRADEMARKS.md  azure.yaml  chainlit.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci-cd.yml  pr-deploy.yml  rollback.yml
docs/: RAI-testing-script.md  SecPostureIQ_Slide_Deck_Diagrammed_v4.pptx  app-insights-guide.md  architecture.md  consent-revocation-plan.md  how-to-assess-me5-tenant.md  lessons-learned-multi-tenant-auth.md  multi-tenant-cutover-runbook.md  multi-tenant-strategy.md  multi-tenant-user-flow.md  option-a-implementation-plan.md  posture_iq_agent_plan.md  public-release-revision-plan.md  scaling-strategy.md  sdk-feedback.md  secpostureiq_agent_plan.md  setup-guide.md  tools-data-sources.md  web-agent-tool-guide.md  web-conversational-chat-plan.md
docs/diagrams/: high-level-architecture.mmd
docs/ghcp_challenge_submission/: demo_talking_points.md  ghcp_sdk_challenge.md  slide_deck_content.md  submission_checklist.md  submission_summary.md  video_script.md
infra/: azuredeploy.json  main.bicep
infra/dashboards/: postureiq-dashboard.json  powerbi-posture-dashboard.json  secpostureiq-dashboard.json
infra/modules/: app-insights.bicep  availability-test.bicep  container-app.bicep  container-registry.bicep  content-safety.bicep  keyvault.bicep  openai.bicep
infra/parameters/: dev.bicepparam  prod.bicepparam
scripts/: azd-postprovision.sh  cleanup-dev.sh  deploy-customer.sh  load_test.py  post-deploy-button.sh  preflight.sh  provision-dev.sh  setup-branch-protection.sh  setup-oidc.sh  setup-permissions.sh  simulate_traffic.py
src/: __init__.py  chainlit_app.py
src/agent/: __init__.py  config.py  main.py  system_prompt.py
src/api/: __init__.py  app.py  chat.py  chat_stream.py
src/middleware/: __init__.py  audit_logger.py  auth.py  content_safety.py  input_validation.py  logging_config.py  pii_redaction.py  rai.py  tracing.py
src/static/: index.html
src/tools/: __init__.py  adoption_scorecard.py  defender_coverage.py  definitions.py  entra_config.py  fabric_telemetry.py  foundry_playbook.py  graph_client.py  purview_policies.py  remediation_plan.py  secure_score.py
tests/integration/: test_e2e_smoke.py
tests/unit/: test_adoption_scorecard.py  test_agent_host.py  test_audit.py  test_auth.py  test_bicep_templates.py  test_chat.py  test_content_safety.py  test_defender_coverage.py  test_deployment.py  test_entra_config.py  test_fabric_telemetry.py  test_foundry_playbook.py  test_health_probes.py  test_observability.py  test_pii_redaction.py  test_purview_policies.py  test_rai.py  test_remediation_plan.py  test_secure_score.py  test_tool_definitions.py
