[project]
name = "posture-iq"
version = "0.1.0"
description = "PostureIQ — ME5 Security Posture Assessment Agent for the Project 479 Get-to-Green motion"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ying-Jung Chen" },
]

dependencies = [
    # GitHub Copilot SDK
    "github-copilot-sdk>=0.1.0",

    # Azure Identity & Auth
    "azure-identity>=1.15.0",

    # Microsoft Graph SDK
    "msgraph-sdk>=1.2.0",

    # Azure OpenAI
    "openai>=1.12.0",

    # Azure AI Content Safety (RAI)
    "azure-ai-contentsafety>=1.0.0",

    # Azure Monitor / OpenTelemetry (Observability)
    "azure-monitor-opentelemetry>=1.3.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",

    # GenAI auto-instrumentation (populates App Insights "Agent" blade)
    "opentelemetry-instrumentation-openai-v2>=2.0b0",

    # API framework (health probes)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Authentication (JWT validation for Entra ID tokens)
    "PyJWT[crypto]>=2.8.0",

    # Utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.27.0",       # async test client for FastAPI
    "respx>=0.21.0",       # mock HTTP for Graph API calls
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # allow Depends() in FastAPI defaults
    "SIM108", # allow if/else blocks over ternary for readability
    "SIM117", # allow nested with statements for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S105",   # hardcoded passwords in test fixtures
    "S106",   # hardcoded password arguments in tests
    "S603",   # subprocess calls in test code
    "S607",   # partial executable path in subprocess
    "A002",   # shadowing builtins (id, type) in test helpers
    "F841",   # unused variables in tests (side-effect assertions)
    "SIM300", # yoda conditions in assertions
]
"src/api/app.py" = ["E402"]  # re import after constant definition

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
